# vent

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.vent  message.txt
include/: config.h  download.h  option.h  paths.h  platform.h  sha256.h  threadpool.h  ui.h
src/: config.c  download.c  main.c  option.c  paths.c  platform_posix.c  platform_win.c  sha256.c  threadpool.c  ui.c
std/: cmake.vent  curl.vent  git.vent  glfw.vent  glm.vent  llvm.vent  ninja.vent  python.vent  stb.vent  tinyobjloader.vent
